--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_bloc: 3.2.0
+  rxdart: 0.23.1
+  get_it: 4.0.1
+  equatable: 1.1.1
+  uuid: 2.0.4
 
 dev_dependencies:
   flutter_test:
