Added bike item card - Added routes for navigate to deiffrenet screen - Mock data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   get_it: 4.0.1
   equatable: 1.1.1
   uuid: 2.0.4
+  cached_network_image: 2.0.0
 
 dev_dependencies:
   flutter_test:
