--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   equatable: 1.1.1
   uuid: 2.0.4
   cached_network_image: 2.0.0
+  flutter_icons: 1.0.0+1
 
 dev_dependencies:
   flutter_test:
