--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   uuid: 2.0.4
   cached_network_image: 2.0.0
   fluttertoast: 4.0.1
+  mockito: 4.1.1
+  bloc_test: 4.0.0
 
 dev_dependencies:
   flutter_test:
